--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Html stuff
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Abdullah Arif</title>
+      <meta http-equiv = "refresh" content = "2; url = https://gitconnected.com/aarif123456/resume" />
+   </head>
+   <body>
+      <p>Website under maintenance - please check out my resume  - Thank you for your understanding</p>
+   </body>
+</html>
